# better-docs

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  railway.toml  vercel.json
agent/: Dockerfile  requirements.txt
agent/app/: llm.py  main.py  models.py  pipeline.py
agent/app/nodes/: clone.py  generate.py  parse.py  refine.py
src/: classifier.rs  graph.rs  indexing.rs  main.rs  parsing.rs
web/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
web/prisma/: schema.prisma
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/generate/: route.ts
web/src/app/api/projects/: route.ts
web/src/app/api/projects/[slug]/: route.ts
web/src/app/api/repos/: route.ts
web/src/app/dashboard/: layout.tsx  page.tsx
web/src/app/docs/[slug]/: PublicDocsViewer.tsx  layout.tsx  not-found.tsx  page.tsx
web/src/app/login/: page.tsx
web/src/components/: CardGroup.tsx  CodeBlock.tsx  DocsContent.tsx  DocsPreview.tsx  DocsSidebar.tsx  Navbar.tsx  PromptBar.tsx  RepoList.tsx  ThemeProvider.tsx
web/src/lib/: agent.ts  auth.ts  github.ts  storage.ts
web/src/styles/: design-tokens.css
web/src/types/: index.ts
