[package]
name = "better-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-go = "0.21"
tree-sitter-java = "0.21"
tree-sitter-cpp = "0.21"
tree-sitter-ruby = "0.21"
tree-sitter-php = "0.22"
neo4rs = "0.8"
ignore = "0.4"
rayon = "1.10"
tower-http = { version = "0.5", features = ["cors"] }
